<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-31dp"
        tools:layout_editor_absoluteY="127dp">
        <ImageView
            android:id="@+id/imageViewWeather"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:contentDescription="@string/weather_image"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/margin_weather_fab_end"
        android:layout_marginTop="@dimen/margin_weather_fab_top"
        android:src="@drawable/ic_icon_location"
        app:fabSize="mini"
        app:backgroundTint="@color/white_masked"
        app:borderWidth="0dp"
        android:contentDescription="@string/search_button" />

    <ProgressBar
        android:id="@+id/progressBarLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateTint="@color/white_masked"
        android:visibility="gone"
        tools:visibility="visible" />
    <LinearLayout
        android:id="@+id/linearLayoutWeatherData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        tools:visibility="visible">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/gradient_landing_fragment"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/margin_weather_layout"
            android:paddingBottom="@dimen/margin_weather_layout_bottom"
            android:background="@color/grey_transparent">
            <LinearLayout
                android:id="@+id/linearLayoutCelsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_weather_info"
                android:layout_gravity="end">
                <TextView
                    android:id="@+id/textViewWeatherTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_masked"
                    android:textSize="@dimen/text_size_temp"
                    android:layout_marginHorizontal="@dimen/margin_weather_info"
                    tools:text="-10"/>
                <TextView
                    android:id="@+id/textViewWeatherTempChar"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_masked"
                    android:textSize="@dimen/text_size_weather"
                    android:text="@string/temp_celsius"
                    android:paddingTop="@dimen/margin_weather_info"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutWeatherMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_weather_info"
                android:layout_gravity="end">
                <ImageView
                    android:id="@+id/imageIconWeather"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:src="@drawable/ic_icon_sunny"
                    android:elevation="50dp"
                    android:layout_marginHorizontal="@dimen/margin_weather_icon"
                    android:contentDescription="@string/weather_icon">
                </ImageView>
                <TextView
                    android:id="@+id/textViewWeatherData"
                    android:fontFamily="sans-serif-light"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_masked"
                    android:textSize="@dimen/text_size_weather"
                    tools:text="Sunny"/>
            </LinearLayout>
            <TextView
                android:id="@+id/textViewWeatherDataDescription"
                android:fontFamily="sans-serif-light"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_masked"
                android:textSize="@dimen/text_size_description"
                android:layout_marginBottom="@dimen/margin_weather_info"
                tools:text="broken clouds"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/searchSheet"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            android:background="@drawable/sheet_background_transition"
            >
            <ImageView
                android:id="@+id/imageDragHandle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:src="@drawable/ic_icon_drag_handle"
                tools:ignore="ContentDescription"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="@dimen/margin_weather_layout"
                android:layout_marginTop="@dimen/margin_weather_layout"
                android:layout_marginBottom="@dimen/margin_weather_info"
                >
                <TextView
                    android:fontFamily="sans-serif-light"
                    android:id="@+id/textViewLocation"
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_location"
                    android:paddingBottom="@dimen/margin_weather_info"
                    tools:text="Sofia, Bulgaria"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/editTextCityContainer"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginVertical="@dimen/margin_weather_icon"
                    android:visibility="invisible"
                    tools:visibility="visible">
                    <EditText
                        android:id="@+id/editTextCity"
                        android:hint="@string/city_name"
                        android:textColor="@color/grey"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/city_search_background_transition"
                        android:importantForAutofill="no"
                        android:paddingHorizontal="10dp"
                        android:inputType="text"
                        android:imeOptions="actionSearch" />
                    <ImageView
                        android:id="@+id/imageSearchCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_icon_search"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/search_button" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:id="@+id/layoutSavedCities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>